--- a/src/components-next/Section/Section.module.scss
+++ b/src/components-next/Section/Section.module.scss
@@ -11,6 +11,8 @@
 .light {
   background-color: var(--color-bg-light);
   color: var(--color-text-dark);
+  /* Darken accent so it meets 4.5:1 on white (#2b72e6 = 4.51:1 on #fff) */
+  --color-accent: #2b72e6;
 }
 
 .inner {
